Fix HTML structure and add missing elements

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <img src="my_photo.jpg" alt="Profile Image of M.Aari">
+        <img src="html_finalprojimages/my_photo.jpg" alt="Profile Image of M.Aari">
         <h3>M.Aari</h3>
         <p>I am a recent computer science graduate with a passion for web development. With less than 5 years of experience, I have worked on various projects involving HTML, CSS, and JavaScript. I am eager to apply my skills in a professional setting and contribute to innovative solutions.</p>
     </section>
@@ -87,4 +87,5 @@
     </section>
     <script src="script.js"></script>
 </body>
+
 </html>
